<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/book_hint"
        style="@style/LabelTheme"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/app_name"
        android:gravity="center"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/bookTitle"/>

    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        tools:text="@string/app_name"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/bookAuthor"/>

    <Button
        android:id="@+id/toReadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:drawableTint="@color/colorPrimary"
        android:drawableTop="@drawable/books"
        android:text="@string/to_read"
        style="@style/ButtonWithIconTheme"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <Button
        android:id="@+id/toBuyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:drawableTint="@color/colorPrimary"
        android:drawableTop="@drawable/shopping_cart"
        android:text="@string/to_buy"
        style="@style/ButtonWithIconTheme"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/toReadButton"
    />

</androidx.constraintlayout.widget.ConstraintLayout>