<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/books_to_read"
                style="@style/LabelTheme"/>

            <TextView
                android:id="@+id/seeAll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:text="@string/see_all"
                android:layout_alignParentEnd="true"
                style="@style/LinkTheme"/>

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/noItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_items_text"
            android:visibility="gone"/>

    </LinearLayout>

</merge>